# MDPCalib

./: .gitignore  Dockerfile  README.md  dev.md  run_mdpcalib.sh  run_mdpcalib_blt.sh  run_mdpcalib_fine_tuning.sh  run_mdpcalib_ros2.sh
src/CMRNext/launch/: cmrnext_blt.launch
src/CMRNext/src/cmrnext/: cmrnext_ros_node.py
src/FAST_LO/: CMakeLists.txt
src/calib_cfg/config/: config.yaml
src/optimization_utils/include/optimization_utils/: cost_functors.h  forward.h  io_utils.h  optimizer.h
src/optimization_utils/src/: io_utils.cpp  node.cpp  optimizer.cpp
src/orb_slam3_ros_wrapper/config/: blt_front_704x384.yaml
src/orb_slam3_ros_wrapper/launch/: mono_blt_front_without_play_and_rviz.launch
src/pose_synchronizer/: CMakeLists.txt  package.xml
src/pose_synchronizer/launch/: play_bag_blt.launch  pose_synchronizer_fastlo_blt.launch  ros2_live_calibration.launch
src/pose_synchronizer/rviz/: combined.rviz
src/pose_synchronizer/scripts/: blt_camera_adapter.py  calibration_result_monitor.py  camera_passthrough_adapter.py  publish_gt_from_tf.py  start_ros2_calibration.sh
src/pose_synchronizer/src/: node.cpp
